--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ python-dotenv==1.0.1
 telethon==1.37.0
 tgcrypto==1.2.5
 dnspython==2.2.1
-pyrogram1==0.1.0
-flask==2.2.0  
-gunicorn==23.0.0  
-
+Flask==2.2.0
+pyrogram==2.0.0
+gunicorn==23.0.0
